--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </style>
     </head>
     <body>
-        <div id="game-container"></div>
+        <div id="game-container" style="width: 100%; height: 100%;"></div>
         <script src="./phaser.js"></script>
         <script type="module" src="./src/main.js"></script>
     </body>
